another possible fix for checkbox on ios

--- a/client/src/dark.css
+++ b/client/src/dark.css
@@ -16,7 +16,7 @@
     align-items: center;
 }
 
-input[type='checkbox'].dmcheck {
+input[type='checkbox'].dmcheck + label {
     width: 40px;
     height: 10px;
     background: #555;
